[project]
name = "mangonodepack"
description = "Node pack designed to save images with metadata supported by Civitai."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/mang01010/MangoNodePack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mang01010"
DisplayName = "MangoNodePack"
Icon = ""
